--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"author": "me",
+	"description": "does something",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
