--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "me",
 	"description": "does something",
+	"keywords": ["freecodecamp", "demo", "jsonpack"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
