--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "does something",
 	"keywords": ["freecodecamp", "demo", "jsonpack"],
 	"license": "MIT",
+	"version": "1.2.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
